[package]
name = "rmonitor"
version = "0.1.0"
license = "MIT/Apache-2.0"
readme = "README.md"
authors = ["Richard Bradfield <bradfier@fstab.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tokio-codec = "0.2.0-alpha"
bytes = "0.4"
