[package]
name = "rmonitor"
version = "0.1.0"
license = "MIT/Apache-2.0"
readme = "README.md"
authors = ["Richard Bradfield <bradfier@fstab.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tokio-util = { version = "0.3", features = ["codec"] }
bytes = "0.5"

[dev-dependencies]
tokio = { version = "0.2", features = ["time", "tcp", "rt-core", "macros", "dns"] }
